<resources>
    <string name="app_name">LAB3_MTM</string>
    <string name="title_player">Player</string>
    <string name="title_recorder">Recorder</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="choose_file">Choose file</string>
    <string name="start">start</string>
    <string-array name="Extension">
        <item>3gpp</item>
        <item>mp3</item>
        <item>acc</item>
        <item>m4a</item>
        <item>wav</item>
    </string-array>
</resources>